# income_divider

./: .gitignore  Cargo.toml
src/: main.rs
ui/: appwindow.slint
